# bookshelter

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a41869d7c4c_your_message.py
app/: .env.dev  main.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: books.py  login.py  user_books.py  users.py
app/core/: config.py  security.py
app/email-templates/src/: confirm_password.mjml
app/infrastructure/: database.py  schemas.py
app/infrastructure/crud/: books.py  requests.py  user.py  user_books.py
app/infrastructure/models/: __init__.py  base.py  books.py  user_books.py  users.py
app/infrastructure/repositories/: base.py  books.py  requests.py  user.py  user_books.py
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841
postgres-data/base/5/: 1247  1249  1259  1259_vm  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  40985  5002  pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
