[tool.poetry]
name = "pizzareview"
version = "0.1.0"
description = ""
authors = ["MaksymB <m.bychyniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
emails = "^0.6"
aiofiles = "^23.2.1"
alembic = "^1.13.1"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
